--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ python-dotenv~=1.0.1
 djangorestframework~=3.14.0
 django-oauth-toolkit~=3.0.1
 djangorestframework-simplejwt==5.3.0
+django-cors-headers~=4.3.1
